# PySiMMMulator

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .style.yapf  LICENSE  README.md  config.html  config.yaml  example_config.yaml  example_config_dict.py  genindex.html  geos.html  index.html  logging.conf  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  simulate.html  study.html
.doctrees/: config.doctree  environment.pickle  geos.doctree  index.doctree  simulate.doctree  study.doctree
.github/workflows/: documentation.yaml  main.yml  publish.yaml  test.yaml
_sources/: index.rst.txt  simulate.rst.txt  study.rst.txt
docs/source/: conf.py  config.rst  geos.rst  index.rst  simulate.rst
examples/: simulation.ipynb
src/: helpers.py  load_parameters.py  simmmulate.py
src/pysimmm/: __init__.py  command_line.py  load_parameters.py  param_handlers.py  simulate.py
src/pysimmmulator/: __init__.py  command_line.py  geos.py  helpers.py  load_parameters.py  param_handlers.py  simmmulate.py  simulate.py  study.py  visualize.py
tests/: spot_test.py  test_cli.py  test_config.py  test_geo.py  test_multisim.py  test_sim.py  test_study.py  test_viz.py
