[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[project]
name = "pysimmmulator"
description = "Python package for generating MMM (Marketing Mix Model) input data"
dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
  "matplotlib"
]
requires-python = ">=3.8"
authors = [
  { name="Ryan Duecker", email="ryan.duecker@yahoo.com" },
]
readme = "README.md"
license = {file = 'LICENSE'}
keywords = ["Marketing", "Media", "Model", "MMM", "Simulate", "SiMMMulator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["pytest"]
linting = ["flake8", "pylint"]
dev = ["yapf","flake8","pylint","pytest","sphinx"]
docs = ["sphinx"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.setuptools.dynamic]
version = {file = "src/pysimmmulator/VERSION"}

[tool.coverage.run]
source = ["src"]

[tool.hatch.version]
path = "src/pysimmmulator/__init__.py"

[project.scripts]
pysimmm = "pysimmmulator.command_line:main"

[tool.yapf]
based_on_style = 'yapf'
indent_width = 2
blank_lines_around_top_level_definition = 1
blank_line_before_nested_class_or_def = false
column_limit = 200
