[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[project]
name = "pysimmmulator"
description = "Python package for generating MMM (Marketing Mix Model) input data"
dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
  "matplotlib"
]
requires-python = ">=3.8"
authors = [
  { name="Ryan Duecker", email="ryan.duecker@yahoo.com" },
]
readme = "README.md"
license = {file = 'LICENSE'}
keywords = ["Marketing", "Media", "Model", "MMM", "Simulate", "SiMMMulator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["pytest"]
linting = ["flake8", "pylint"]
dev = ["flake8","pylint","pytest","sphinx", "ruff"]
docs = ["sphinx"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.setuptools.dynamic]
version = {file = "src/pysimmmulator/VERSION"}

[tool.coverage.run]
source = ["src"]

[tool.hatch.version]
path = "src/pysimmmulator/__init__.py"

[project.scripts]
pysimmm = "pysimmmulator.command_line:main"

[tool.ruff]
preview = true
target-version = "py311"
line-length = 150
indent-width = 2
exclude = [
  ".git/",
  "docs/",
]

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "W6",
  "E71",
  "E72",
  "E112",   # no-indented-block
  "E113",   # unexpected-indentation
  # "E124",
  "E203",   # whitespace-before-punctuation
  "E272",   # multiple-spaces-before-keyword
  "E275",   # missing-whitespace-after-keyword
  "E303",   # too-many-blank-lines
  "E304",   # blank-line-after-decorator
  "E501",   # line-too-long
  # "E502",
  "E702",   # multiple-statements-on-one-line-semicolon
  "E703",   # useless-semicolon
  "E731",   # lambda-assignment
  "W191",   # tab-indentation
  "W291",   # trailing-whitespace
  "W293",   # blank-line-with-whitespace
  "UP039",  # unnecessary-class-parentheses
  "C416",   # unnecessary-comprehension
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "A",      # builtin-variable-shadowing, builtin-argument-shadowing, builtin-attribute-shadowing
  "FURB110",# if-exp-instead-of-or-operator
  "RUF018", # assignment-in-assert
]

[tool.ruff.format]
exclude = ["*"]
